Added graphics pipeline and shader loading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,15 @@ set(CMAKE_CXX_STANDARD 17)
 
 file(GLOB_RECURSE HPP_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/cxx/*.h)
 file(GLOB_RECURSE CPP_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/cxx/*.cpp)
+file(COPY src/spir-v
+        DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
 
 find_package(Vulkan REQUIRED)
-
-add_executable(VulkanCXXLearn ${HPP_FILES} ${CPP_FILES} src/cxx/VulkanContext/VulkanSwapChain/VulkanRenderingPipeline.h src/cxx/VulkanContext/GraphicsPipeline/GraphicsPipeline.h src/cxx/VulkanContext/GraphicsPipeline/PipelineConfig.h)
+add_executable(VulkanCXXLearn ${HPP_FILES} ${CPP_FILES})
 
 add_subdirectory(lib/glm)
 add_subdirectory(lib/glfw)
-
 target_include_directories(VulkanCXXLearn PUBLIC ${VULKAN_INCLUDE_DIR})
-target_link_libraries(VulkanCXXLearn glm glfw ${Vulkan_LIBRARY})
+target_link_libraries(VulkanCXXLearn glm glfw ${Vulkan_LIBRARY} libshaderc_combined.a)
 
