--- a/KGAFTEngine.vcxproj
+++ b/KGAFTEngine.vcxproj
@@ -79,8 +79,8 @@
     <LibraryPath>$(ProjectDir)\lib\glfw\lib;C:\VulkanSDK\1.3.236.0\Lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <ExternalIncludePath>$(ProjectDir)\lib\glm;$(ProjectDir)\lib\glfw\include;C:\VulkanSDK\1.3.231.1\Include;$(ExternalIncludePath)</ExternalIncludePath>
-    <LibraryPath>$(ProjectDir)\lib\glfw\lib;C:\VulkanSDK\1.3.231.1\Lib;$(LibraryPath)</LibraryPath>
+    <ExternalIncludePath>$(ProjectDir)\lib\glm;$(ProjectDir)\lib\glfw\include;$(VULKAN_SDK)\Include;$(ExternalIncludePath)</ExternalIncludePath>
+    <LibraryPath>$(ProjectDir)\lib\glfw\lib;$(VULKAN_SDK)\Lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ExternalIncludePath>$(ProjectDir)\lib\glm;$(ProjectDir)\lib\glfw\include;C:\VulkanSDK\1.3.236.0\Include;$(ExternalIncludePath)</ExternalIncludePath>
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\cxx\External\stb_image.cpp" />
     <ClCompile Include="src\cxx\main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -158,6 +159,7 @@
     <None Include="src\spir-v\simple_shader.vert" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\cxx\External\stb_image.h" />
     <ClInclude Include="src\cxx\VulkanContext\GraphicsPipeline\GraphicsPipeline.h" />
     <ClInclude Include="src\cxx\VulkanContext\GraphicsPipeline\PipelineConfig.h" />
     <ClInclude Include="src\cxx\VulkanContext\GraphicsPipeline\VulkanShader.h" />
@@ -184,6 +186,7 @@
     <ClInclude Include="src\cxx\Window\WindowResizeCallback.h" />
     <ClInclude Include="src\cxx\VulkanContext\VulkanDescriptorSet\VulkanDescriptorPool.h" />
     <ClInclude Include="src\cxx\VulkanContext\VulkanImmediateShaderData\UniformBuffer\UniformBuffer.h" />
+    <ClInclude Include="src\cxx\VulkanContext\VulkanImage\VulkanImage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
