--- a/KGAFTEngine.vcxproj.filters
+++ b/KGAFTEngine.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="src\cxx\main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="src\cxx\External\stb_image.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\spir-v\simple_shader.frag" />
@@ -100,6 +103,12 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="src\cxx\VulkanContext\VulkanImmediateShaderData\UniformBuffer\UniformBuffer.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="src\cxx\VulkanContext\VulkanImage\VulkanImage.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="src\cxx\External\stb_image.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
