--- a/KGAFTEngine.vcxproj.filters
+++ b/KGAFTEngine.vcxproj.filters
@@ -23,8 +23,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="src\spir-v\simple_shader.frag" />
-    <None Include="src\spir-v\simple_shader.vert" />
+    <None Include="src\spir-v\default.frag" />
+    <None Include="src\spir-v\default.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\cxx\VulkanContext\VulkanDescriptorSet\VulkanDescriptorSetLayout.h">
@@ -115,6 +115,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="src\cxx\VulkanContext\VulkanImage\VulkanSampler.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="src\cxx\Engine\RenderPipeline.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
