--- a/lib/glfw/docs/Doxyfile.in
+++ b/lib/glfw/docs/Doxyfile.in
@@ -1387,7 +1387,7 @@ COMPACT_RTF            = NO
 # contain links (just like the HTML output) instead of page references.
 # This makes the output suitable for online browsing using WORD or other
 # programs which support those fields.
-# Note: wordpad (write) and others do not support links.
+# Note: wordpad (writeAllDescriptors) and others do not support links.
 
 RTF_HYPERLINKS         = NO
 
