Work on model loading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,12 +13,12 @@ link_directories(${VulkanSDKPath}/Bin ${VulkanSDKPath}/Lib LibNativeWin/lib)
 file(GLOB_RECURSE BINARIES LibNativeWin/bin/*.dll)
 
 file(COPY ${BINARIES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-
+file(COPY models DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 file(COPY src/spir-v DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 file(GLOB_RECURSE CPP_FILES src/cxx/*.cpp)
 file(GLOB_RECURSE HPP_FILES src/cxx/*.h)
-add_executable(${ProjectName} ${HPP_FILES} ${CPP_FILES} src/cxx/Engine/GraphicalObjects/Mesh.h)
+add_executable(${ProjectName} ${HPP_FILES} ${CPP_FILES} src/cxx/Engine/GraphicalObjects/Mesh.h src/cxx/Engine/Util/ModelLoader.h)
 
 add_subdirectory(lib/glfw)
 add_subdirectory(lib/glm)
