--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,7 @@
 [submodule "lib/glm"]
 	path = lib/glm
 	url = https://github.com/g-truc/glm
-[submodule "src/modules/VulkanContext"]
-	path = src/modules/VulkanContext
+
+[submodule "src/modules/VulkanTools"]
+	path = src/modules/VulkanTools
 	url = https://github.com/KGAFT/VulkanContext
